# ChangeLog for app-emulation/fs-uae
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-2.0.1.ebuild,
  fs-uae-2.1.9.ebuild, fs-uae-2.1.23.ebuild, fs-uae-2.1.27.ebuild:
  Changed libsdl dep to require X as well.

*fs-uae-2.1.27 (14 Feb 2013)

  14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-2.1.27.ebuild:
  Bumped.

  14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-2.0.1.ebuild,
  fs-uae-2.1.9.ebuild, fs-uae-2.1.23.ebuild:
  Updated deps to use libsdl[opengl] instead of virtual/opengl.

*fs-uae-2.1.23 (31 Jan 2013)

  31 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-2.1.23.ebuild:
  Bumped.

*fs-uae-2.1.9 (24 Jan 2013)

  24 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-2.0.1.ebuild,
  +fs-uae-2.1.9.ebuild:
  Bumped. Fixed repoman warning.

*fs-uae-2.0.1 (12 Jan 2013)

  12 Jan 2013; Michał Ziąbkowski <mziab@o2.pl> +fs-uae-2.0.1.ebuild,
  +metadata.xml:
  New ebuild.
