@@ -10,7 +10,7 @@ SRC_URI="http://fengestad.no/fs-uae/stable/${PV}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND=">=media-libs/libsdl-1.2[joystick,opengl,X]
