@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-2.0.1.ebuild,
+  fs-uae-2.1.9.ebuild, fs-uae-2.1.23.ebuild, fs-uae-2.1.27.ebuild:
+  Added ~amd64 keyword.
+
   14 Feb 2013; Michał Ziąbkowski <mziab@o2.pl> fs-uae-2.0.1.ebuild,
   fs-uae-2.1.9.ebuild, fs-uae-2.1.23.ebuild, fs-uae-2.1.27.ebuild:
   Changed libsdl dep to require X as well.
